# brightness-adjuster

./: .gitattributes  .gitignore  Cargo.toml  README.md  __main__.py  main.py  requirements.txt  save.json  sunrise-brightness.desktop
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  dependabot-release.yml  release.yml  rust.yml  super-linter.yml
modules/: adjust_brightness.py  astronomy_data_fetcher.py  brightness_calculator.py  brightness_controller.py  brightness_spans.py  get_astronomy.py
src/: brightness.rs  config.rs  curve.rs  main.rs  solar.rs  ui.rs  updater.rs  weather.rs
src/ui/: curve_editor.rs  mod.rs  monitors.rs  settings.rs  title_bar.rs
