[package]
name = "sunrise-brightness"
version = "3.3.0"
edition = "2024"
description = "Adjusts screen brightness based on sunrise/sunset - with system tray, curve editor, weather adaptation, and per-monitor support"
license = "MIT"
 
[dependencies]
eframe = { version = "0.34.1", default-features = true }
tray-icon = "0.21.3"
brightness = { version = "0.8", features = ["blocking"] }
solar-positioning = { version = "0.5.1", features = ["chrono"] }
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1.0"
chrono = "0.4"
directories = "6"
auto-launch = "0.6.0"
anyhow = "1"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "debuginfo"
