[package]
name = "sunrise-brightness"
version = "3.5.2"
edition = "2024"
description = "Adjusts screen brightness based on sunrise/sunset - with system tray, curve editor, weather adaptation, and per-monitor support"
license = "MIT"

[dependencies]
eframe = { version = "0.34.1", default-features = true }
tray-icon = "0.22.1"
brightness = { version = "0.8", features = ["blocking"] }
solar-positioning = { version = "0.5.1", features = ["chrono"] }
reqwest = { version = "0.13.3", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1.2"
chrono = "0.4"
directories = "6"
auto-launch = "0.6.0"
anyhow = "1"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "debuginfo"

[package.metadata.deb]
maintainer = "Vianpyro"
copyright = "2026 Vianpyro"
section = "utility"
priority = "optional"
depends = "$auto"
assets = [
    ["target/release/sunrise-brightness", "/usr/bin/", "755"],
]
